--- a/src/app/features/create-task/create-task.css
+++ b/src/app/features/create-task/create-task.css
@@ -1,19 +1,26 @@
 :host {
   display: block;
+  background-color: #fafafa;
+  --text-color: #333;
 }
+
 form {
   display: flex;
+  align-items: center;
+  padding: 0 1rem;
+  border-bottom: 1px solid var(--text-color);
 }
+
 input {
   flex-grow: 2;
-  color: #333;
-  background-color: #BDBDBD;
+  color: var(--text-color);
+  background-color: transparent;
   border: 0;
-  border-bottom: 1px solid #333;
   padding: 1rem;
   font-size: 1rem;
 }
-.sr-only {
+
+button {
   position: absolute;
   width: 1px;
   height: 1px;
